# drf-core-recipes

./: .gitignore  docker-compose.yml
src/: pyproject.toml
src/todo/: models.py  serializers.py  urls.py  views.py
src/todo/migrations/: 0001_initial.py
src/todoproject/: settings.py  urls.py
